--- a/.docker/Dockerfile
+++ b/.docker/Dockerfile
@@ -27,7 +27,7 @@ WORKDIR /dist
 RUN cp /build/main .
 
 # Export necessary port
-EXPOSE PORT
+EXPOSE 8080
 
 # Command to run when starting the container
 CMD ["/dist/main"]
