--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,8 @@ services:
 
   app:
     build:
+      env_file:
+        - .env
       context: .
       dockerfile: ./.docker/Dockerfile
     ports:
