--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       context: .
       dockerfile: ./.docker/Dockerfile
     env_file:
-      - .env
+      - ./.env
     ports:
       - "8080:8080"
     restart: unless-stopped
