--- a/.docker/go/Dockerfile
+++ b/.docker/go/Dockerfile
@@ -15,7 +15,7 @@ COPY go.sum .
 RUN go mod download
 
 # Copy the code into the container
-COPY . .
+COPY .. .
 
 # Build the application
 RUN go build -o main .
