--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,9 +18,9 @@ services:
     container_name: boryspil_express_db
     image: mongo:latest
     environment:
-      MONGODB_USER: "${MONGO_USER}"
-      MONGODB_DATABASE: "${DATABASE}"
-      MONGODB_PASS: "${MONGO_PASSWORD}"
+      MONGO_INITDB_ROOT_USERNAME: "${MONGO_USER}"
+      MONGO_INITDB_ROOT_PASSWORD: "${MONGO_PASSWORD}"
+      MONGO_INITBD_DATABASE: "${DATABASE}"
       MONGODB_DATA_DIR: /data/db
       MONDODB_LOG_DIR: /dev/null
     volumes:
