--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
       - .:/app
     ports:
       - "8080:8080"
-    restart: unless-stopped
+    restart: always
 
   mongo:
     container_name: boryspil_express_db
@@ -20,11 +20,11 @@ services:
     environment:
       MONGO_INITDB_ROOT_USERNAME: "${MONGO_USER}"
       MONGO_INITDB_ROOT_PASSWORD: "${MONGO_PASSWORD}"
-      MONGO_INITBD_DATABASE: "${DATABASE}"
+      MONGO_INITBD_DATABASE: "${MONGO_DATABASE}"
       MONGODB_DATA_DIR: /data/db
       MONDODB_LOG_DIR: /dev/null
     volumes:
       - .docker/mongo:/data/db
     ports:
       - "27017:27017"
-    restart: unless-stopped
+    restart: always
