--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
       - .:/app
     ports:
       - "8080:8080"
-    restart: always
+    restart: unless-stopped
 
   mongo:
     container_name: boryspil_express_db
@@ -27,4 +27,4 @@ services:
       - .docker/mongo:/data/db
     ports:
       - "27017:27017"
-    restart: always
+    restart: unless-stopped
