--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     container_name: boryspil_express_api
     build:
       context: .
-      dockerfile: .docker/Dockerfile
+      dockerfile: .docker/go/Dockerfile
     working_dir: /app
     volumes:
       - .:/app
@@ -16,15 +16,11 @@ services:
 
   mongo:
     container_name: boryspil_express_db
-    image: mongo:latest
-    environment:
-      MONGO_INITDB_ROOT_USERNAME: "${MONGO_USER}"
-      MONGO_INITDB_ROOT_PASSWORD: "${MONGO_PASSWORD}"
-      MONGO_INITBD_DATABASE: "${MONGO_DATABASE}"
-      MONGODB_DATA_DIR: /data/db
-      MONDODB_LOG_DIR: /dev/null
+    build:
+      dockerfile: .docker/mongo/Dockerfile
     volumes:
-      - .docker/mongo:/data/db
+      - .docker/mongo/data:/data/db
+      - .docker/mongo/mongo_config:/data/configdb
     ports:
       - "27017:27017"
     restart: unless-stopped
