--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,7 @@ services:
       MONGO_INITDB_ROOT_PASSWORD: root
       MONGO_INITBD_DATABASE: boryspil_db
     volumes:
+      - .docker/mongo/init-mongo.js:/docker-entrypoint-initdb.d/init-mongo.js:ro
       - .docker/mongo:/data/db
     ports:
       - "27017:27017"
