--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,18 +16,14 @@ services:
 
   mongo:
     container_name: boryspil_express_db
-    build:
-      context: .
-      dockerfile: .docker/mongo/Dockerfile
+    image: mongo:latest
     environment:
       MONGO_INITDB_ROOT_USERNAME: root
       MONGO_INITDB_ROOT_PASSWORD: root
       MONGO_INITBD_DATABASE: boryspil_db
     volumes:
-      - .docker/mongo/mongod.conf:/etc/mongod.conf
-      - .docker/mongo/initdb.d:/docker-entrypoint-initdb.d
+      - .docker/mongo/initdb.d/init.js:/docker-entrypoint-initdb.d/init-js:ro
       - .docker/mongo:/data/db
-      - .docker/mongo/log/:/var/log/mongodb/
     ports:
       - "27017:27017"
     restart: unless-stopped
